unification #2 after fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -486,8 +486,8 @@ header {
 
 .portfolio-li {
   max-width: 370px;
-  /* margin-left: 30px;
-  margin-bottom: 30px; */
+  margin-left: 30px;
+  margin-bottom: 30px;
   background-color: #fff;
 }
 .portfolio-li:hover,
